# CS160

./: README.md  a.bat  package-lock.json  project-manage.xlsx
FinalVersion/: Readme
FinalVersion/Backend/Dlib/: drawFace.py
FinalVersion/Backend/Eyelike/src/: CMakeLists.txt  findEyeCenter.cpp  main.cpp
FinalVersion/db/: cs160.db
FinalVersion/web/: .firebaserc  package-lock.json  sjsu-cs-160-firebase-adminsdk-qc6zo-9ffaf3cefd.json
FinalVersion/web/functions/: frame-extract.js  index.js  package-lock.json  package.json
FinalVersion/web/src/: index.html
FinalVersion/web/src/app/: app.component.css  app.component.ts  app.module.ts
FinalVersion/web/src/environments/: environment.prod.ts
web/: firebase.json  package-lock.json  package.json
web/functions/: frame-extract.js  index.js  package-lock.json  package.json
web/src/: index.html  styles.css
web/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
web/src/app/footer/: footer.component.html  footer.component.scss
web/src/app/header/: header.component.html  header.component.scss  header.component.ts
web/src/app/information/: information.component.html  information.component.scss  information.component.ts
web/src/app/main/: main.component.css  main.component.html  main.component.scss  main.component.ts
web/src/app/model/: upload.model.ts
web/src/app/page-not-found/: page-not-found.component.ts
web/src/app/service/: auth.service.ts  image.ts  server.service.ts  upload.service.ts  user.service.ts  video.ts
web/src/environments/: environment.ts
(+25 files in other folders)
